--- a/d02/Cargo.toml
+++ b/d02/Cargo.toml
@@ -1,14 +1,8 @@
 [package]
-name = "aoc2021"
+name = "d02"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[workspace]
-members = [
-    "d01",
-    "d02",
-]
 
 [dependencies]
